fix: removed text overflow in title of completed exercises of athlete

--- a/src/app/pages/dashboard-page/dashboard-page.component.scss
+++ b/src/app/pages/dashboard-page/dashboard-page.component.scss
@@ -241,6 +241,11 @@
 
 .table-item > span:first-child{
     color: var(--accent-900);
+    display: block;
+    max-width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .position-relative{
